Fix for background shift caused by overflow hidden

--- a/css/memories.css
+++ b/css/memories.css
@@ -26,7 +26,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     min-height: 100vh;
     background-image: url('/res/background.jpeg');
     background-size: cover;
